--- a/app/views/merchant_bulk_discounts/show.html.erb
+++ b/app/views/merchant_bulk_discounts/show.html.erb
@@ -5,3 +5,5 @@
 <h3>Attributes:</h3>
 <p><%= @bulk_discount.percentage_discount %>% Discount</p>
 <p>Purchase of <%= @bulk_discount.quantity_threshold %> or more</p>
+
+<%= link_to "Edit this Discount", edit_merchant_bulk_discount_path(@merchant.id, @bulk_discount.id) %>
