Add api data to index page; complete

--- a/app/views/merchant_bulk_discounts/index.html.erb
+++ b/app/views/merchant_bulk_discounts/index.html.erb
@@ -1,10 +1,10 @@
 <h1><%= @merchant.name %>'s Bulk Discounts Index Page</h1>
 
 <h2>Upcoming Holidays</h2>
-<div id="Upcoming Holidays">
-  <p><%= api_holidays.first.localname %>, <%= api_holidays.first.date %></p>
-  <p><%= api_holidays.second.localname %>, <%= api_holidays.second.date %></p>
-  <p><%= api_holidays.third.localname %>, <%= api_holidays.third.date %></p>
+<div id="Holidays">
+  <p><%= api_holidays.first.name %>, <%= api_holidays.first.date %></p>
+  <p><%= api_holidays.second.name %>, <%= api_holidays.second.date %></p>
+  <p><%= api_holidays.third.name %>, <%= api_holidays.third.date %></p>
 </div>
 
 <h2>List of Bulk Discounts:</h2>
