--- a/app/views/admin/invoices/show.html.erb
+++ b/app/views/admin/invoices/show.html.erb
@@ -12,7 +12,8 @@
 
 <p><b>Created At:</b> <%= @invoice.created_at.strftime('%A, %b %d, %Y') %></p>
 <p><b>Customer:</b> <%= @customer.first_name %> <%= @customer.last_name %></p>
-<p><b>Total Revenue:</b> $<%= @invoice.total_revenue/100 %></p>
+<p><b>Total Revenue:</b> <%= number_to_currency(@invoice.total_revenue/100) %></p>
+<p><b>Total Discounted Revenue:</b> <%= number_to_currency(@invoice.total_discounted_revenue/100) %></p>
 <br>
 
 <h3>Invoice Items:</h3>
