--- a/app/views/merchant_bulk_discounts/edit.html.erb
+++ b/app/views/merchant_bulk_discounts/edit.html.erb
@@ -5,10 +5,10 @@
 
 <%= form_with url: "/merchants/#{@merchant.id}/bulk_discounts/#{@bulk_discount.id}", method: :patch, local: true do |f| %>
   <%= f.label :percentage_discount %>
-  <%= f.number_field :percentage_discount %>
+  <%= f.number_field :percentage_discount, value: @bulk_discount.percentage_discount %>
 
   <%= f.label :quantity_threshold %>
-  <%= f.number_field :quantity_threshold %>
+  <%= f.number_field :quantity_threshold, value: @bulk_discount.quantity_threshold %>
 
   <%= f.submit "Update Discount" %>
 <% end %>
